# coingecko-mcp-server

./: .gitignore  README.md  config.json  main.py  pyproject.toml
coingecko_mcp_server/: __init__.py  __main__.py  coingecko-public-api-v3.json
